--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.3s ease; /* Add a smooth transition for all elements */
 }
 
 body {
@@ -51,15 +52,26 @@ h1 {
 }
 
 .app input {
-  padding: 0.7rem 1.5rem;
+  padding: 0.9rem 4.5rem;
   font-size: 1.2rem;
   border-radius: 25px;
   border: 1px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.3);
+  transition: background 0.3s ease, border-color 0.3s ease, color 0.3s ease;
 }
 
-::placeholder{
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+::placeholder {
   color: #f8f8f8;
+  animation: fadeIn 2s ease forwards;
 }
 
 .container {
@@ -72,6 +84,28 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.app .container {
+  max-width: 700px;
+  height: 700px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0; /* Start with zero opacity */
+  transform: translateY(20px); /* Move container down initially */
+  transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition for container */
+}
+
+.app:hover .container {
+  opacity: 1; /* Fade in container on hover */
+  transform: translateY(
+    0
+  ); /* Move container back to its original position on hover */
 }
 
 .app .top {
