--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,13 @@ h1 {
   position: relative;
   background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .app::before {
   content: "";
-  background: url("../src/assets/sunset.jpg") no-repeat center center/cover;
+  background: url("../src/assets/sunset.jpg") no-repeat center center;
+  background-size: cover; /* Ensures that the background covers the entire element */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -84,6 +86,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .app .container {
@@ -96,16 +99,14 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  opacity: 0; /* Start with zero opacity */
-  transform: translateY(20px); /* Move container down initially */
-  transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition for container */
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .app:hover .container {
-  opacity: 1; /* Fade in container on hover */
-  transform: translateY(
-    0
-  ); /* Move container back to its original position on hover */
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .app .top {
@@ -139,11 +140,54 @@ h1 {
 footer {
   text-align: end;
   padding: 1px;
-  /* background-color: rgba(255, 255, 255, 0.2); */
   color: #ffffff;
 }
 
 footer p {
   margin: 5px 0 0;
   font-size: 0.9rem;
+}
+
+/* Responsive adjustments */
+@media only screen and (max-width: 768px) {
+  .app .container {
+    height: auto;
+    padding: 0 20px;
+    top: 5%;
+  }
+
+  .app input {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  @media only screen and (max-width: 480px) {
+    .app input {
+      width: 90%; /* Increase width of input field */
+      padding: 10px; /* Adjust padding */
+      font-size: 0.9rem; /* Adjust font size */
+    }
+
+    h1 {
+      font-size: 2.5rem; /* Further reduce the main temperature size */
+    }
+
+    p {
+      font-size: 1rem; /* Reduce the font size for smaller screens */
+    }
+
+    .app .top,
+    .app .bottom {
+      margin: 0.25rem auto; /* Adjust margins for tighter spaces */
+    }
+
+    .app .bottom div {
+      margin-bottom: 1rem; /* Add margin between elements */
+    }
+  }
 }
