--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,11 @@ h1 {
   padding: 1rem;
 }
 
+.app .locationname {
+  font-size: 40px;
+  font-weight: 600;
+}
+
 /* Input Field Styling */
 .app input {
   padding: 0.9rem 4.5rem;
